[gd_scene load_steps=19 format=2]

[ext_resource path="res://levels/commons/themes/mainTitleTheme.tres" type="Theme" id=1]
[ext_resource path="res://levels/hudSettings/hudsettings.gd" type="Script" id=2]
[ext_resource path="res://levels/commons/fonts/montserrat/Montserrat-SemiBold.otf" type="DynamicFontData" id=10]
[ext_resource path="res://levels/commons/fonts/montserrat/Montserrat-Regular.otf" type="DynamicFontData" id=13]

[sub_resource type="GradientTexture" id=1]

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 10 )

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 1, 0.0859375, 0.717015, 1, 0.990068, 0.849416, 0.251384, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="StyleBoxTexture" id=5]
texture = SubResource( 4 )
region_rect = Rect2( 0, 0, 2048, 1 )
margin_left = 10.0
margin_right = 10.0
margin_top = 5.0
margin_bottom = 5.0

[sub_resource type="DynamicFont" id=6]
size = 22
font_data = ExtResource( 13 )

[sub_resource type="StreamTexture" id=7]
flags = 4

[sub_resource type="StreamTexture" id=8]
flags = 4

[sub_resource type="Gradient" id=9]
colors = PoolColorArray( 1, 0.833374, 0.179688, 1, 0.664188, 0.148453, 0.808594, 1 )

[sub_resource type="GradientTexture" id=10]
gradient = SubResource( 9 )

[sub_resource type="StyleBoxTexture" id=11]
texture = SubResource( 10 )
region_rect = Rect2( 0, 0, 2048, 1 )
margin_left = 10.0
margin_right = 10.0
margin_top = 5.0
margin_bottom = 5.0

[sub_resource type="Gradient" id=12]
colors = PoolColorArray( 0.519372, 0.035553, 0.568848, 1, 0.994629, 0.345789, 0.786797, 1 )

[sub_resource type="GradientTexture" id=13]
gradient = SubResource( 12 )

[sub_resource type="StyleBoxTexture" id=14]
texture = SubResource( 13 )
region_rect = Rect2( 0, 0, 2048, 1 )
margin_left = 10.0
margin_right = 10.0
margin_top = 5.0
margin_bottom = 5.0

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fond" type="TextureRect" parent="."]
modulate = Color( 0, 0, 0, 0.65098 )
self_modulate = Color( 1, 1, 1, 0.231373 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 1 )
expand = true

[node name="SettingsFullWindow" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsFullWindow"]
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/separation = 120

[node name="header" type="HBoxContainer" parent="SettingsFullWindow/VBoxContainer"]
margin_right = 1024.0
size_flags_horizontal = 11
custom_constants/separation = 0

[node name="Control" type="Control" parent="SettingsFullWindow/VBoxContainer/header"]
margin_right = 1024.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="SettingsFullWindow/VBoxContainer/header/Control"]
anchor_right = 1.0
margin_bottom = 120.0
expand = true
stretch_mode = 1

[node name="headerContainer" type="MarginContainer" parent="SettingsFullWindow/VBoxContainer/header/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsFullWindow/VBoxContainer/header/Control/headerContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 76.0
custom_constants/separation = 50

[node name="Settings" type="Label" parent="SettingsFullWindow/VBoxContainer/header/Control/headerContainer/HBoxContainer"]
margin_right = 984.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
text = "Settings"
align = 1
valign = 1
uppercase = true

[node name="titleMargins" type="MarginContainer" parent="SettingsFullWindow/VBoxContainer/header/Control/headerContainer/HBoxContainer"]
visible = false
margin_left = 517.0
margin_right = 984.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 150
custom_constants/margin_left = 150

[node name="options" type="TextureButton" parent="SettingsFullWindow/VBoxContainer/header/Control/headerContainer/HBoxContainer"]
visible = false
margin_left = 904.0
margin_right = 984.0
margin_bottom = 65.0
rect_min_size = Vector2( 80, 65 )
size_flags_horizontal = 9
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3
expand = true
stretch_mode = 5

[node name="main" type="MarginContainer" parent="SettingsFullWindow/VBoxContainer"]
margin_top = 120.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="old" type="HBoxContainer" parent="SettingsFullWindow/VBoxContainer/main"]
visible = false
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 460.0
size_flags_vertical = 3

[node name="AsideMenu" type="MarginContainer" parent="SettingsFullWindow/VBoxContainer/main/old"]
margin_right = 221.0
margin_bottom = 440.0
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="AsideDetails" type="MarginContainer" parent="SettingsFullWindow/VBoxContainer/main/old"]
margin_left = 225.0
margin_right = 984.0
margin_bottom = 440.0
size_flags_horizontal = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="settingsContainer" type="HBoxContainer" parent="SettingsFullWindow/VBoxContainer/main"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 460.0

[node name="AsideMenu" type="Panel" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer"]
margin_right = 180.0
margin_bottom = 440.0
rect_min_size = Vector2( 180, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer/AsideMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="listButton" type="VBoxContainer" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer/AsideMenu/VBoxContainer"]
margin_right = 180.0
margin_bottom = 416.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Audio" type="Button" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer/AsideMenu/VBoxContainer/listButton"]
margin_right = 180.0
margin_bottom = 38.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
text = "AUDIO"

[node name="Jeu" type="Button" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer/AsideMenu/VBoxContainer/listButton"]
margin_top = 42.0
margin_right = 180.0
margin_bottom = 80.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
text = "JEU"

[node name="Controle" type="Button" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer/AsideMenu/VBoxContainer/listButton"]
margin_top = 84.0
margin_right = 180.0
margin_bottom = 122.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
text = "CONTRÃ”LES"

[node name="resetButton" type="HBoxContainer" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer/AsideMenu/VBoxContainer"]
margin_top = 420.0
margin_right = 180.0
margin_bottom = 440.0

[node name="button" type="Button" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer/AsideMenu/VBoxContainer/resetButton"]
margin_right = 180.0
margin_bottom = 20.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
text = "RESET"

[node name="AsideDetails" type="Panel" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer"]
margin_left = 184.0
margin_right = 984.0
margin_bottom = 440.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer/AsideDetails"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40

[node name="content" type="VBoxContainer" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer/AsideDetails/MarginContainer"]
margin_left = 40.0
margin_top = 40.0
margin_right = 760.0
margin_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="scrollContainer" type="ScrollContainer" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer/AsideDetails/MarginContainer/content"]
margin_right = 720.0
margin_bottom = 336.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer/AsideDetails/MarginContainer/content/scrollContainer"]
margin_right = 720.0
margin_bottom = 336.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="listMenu" type="VBoxContainer" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer/AsideDetails/MarginContainer/content/scrollContainer/HBoxContainer"]
margin_right = 720.0
margin_bottom = 336.0
size_flags_horizontal = 3

[node name="son" type="VBoxContainer" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer/AsideDetails/MarginContainer/content/scrollContainer/HBoxContainer/listMenu"]
margin_right = 720.0
margin_bottom = 336.0
size_flags_vertical = 3
custom_constants/separation = 10

[node name="Volume" type="Label" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer/AsideDetails/MarginContainer/content/scrollContainer/HBoxContainer/listMenu/son"]
margin_right = 720.0
margin_bottom = 38.0
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = "RÃ©glage du volume"
uppercase = true

[node name="son" type="Label" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer/AsideDetails/MarginContainer/content/scrollContainer/HBoxContainer/listMenu/son"]
margin_top = 48.0
margin_right = 720.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 6 )
text = "Effets sonors"

[node name="son_slider" type="HBoxContainer" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer/AsideDetails/MarginContainer/content/scrollContainer/HBoxContainer/listMenu/son"]
margin_top = 86.0
margin_right = 720.0
margin_bottom = 116.0

[node name="textureound" type="TextureRect" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer/AsideDetails/MarginContainer/content/scrollContainer/HBoxContainer/listMenu/son/son_slider"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = SubResource( 7 )
expand = true
stretch_mode = 6

[node name="sound" type="HSlider" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer/AsideDetails/MarginContainer/content/scrollContainer/HBoxContainer/listMenu/son/son_slider"]
margin_left = 34.0
margin_top = 7.0
margin_right = 683.0
margin_bottom = 23.0
size_flags_horizontal = 3
size_flags_vertical = 4
ticks_on_borders = true

[node name="percent" type="Label" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer/AsideDetails/MarginContainer/content/scrollContainer/HBoxContainer/listMenu/son/son_slider"]
margin_left = 687.0
margin_top = 1.0
margin_right = 720.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 6 )
text = "0%"

[node name="music" type="Label" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer/AsideDetails/MarginContainer/content/scrollContainer/HBoxContainer/listMenu/son"]
margin_top = 126.0
margin_right = 720.0
margin_bottom = 154.0
custom_fonts/font = SubResource( 6 )
text = "Musique"

[node name="son_music" type="HBoxContainer" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer/AsideDetails/MarginContainer/content/scrollContainer/HBoxContainer/listMenu/son"]
margin_top = 164.0
margin_right = 720.0
margin_bottom = 194.0

[node name="texturemusic" type="TextureRect" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer/AsideDetails/MarginContainer/content/scrollContainer/HBoxContainer/listMenu/son/son_music"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = SubResource( 8 )
expand = true
stretch_mode = 6

[node name="music" type="HSlider" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer/AsideDetails/MarginContainer/content/scrollContainer/HBoxContainer/listMenu/son/son_music"]
margin_left = 34.0
margin_top = 7.0
margin_right = 683.0
margin_bottom = 23.0
size_flags_horizontal = 3
size_flags_vertical = 4
ticks_on_borders = true

[node name="percent" type="Label" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer/AsideDetails/MarginContainer/content/scrollContainer/HBoxContainer/listMenu/son/son_music"]
margin_left = 687.0
margin_top = 1.0
margin_right = 720.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 6 )
text = "0%"

[node name="controles" type="VBoxContainer" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer/AsideDetails/MarginContainer/content/scrollContainer/HBoxContainer/listMenu"]
visible = false
margin_top = 195.0
margin_right = 707.0
margin_bottom = 491.0
size_flags_vertical = 3
custom_constants/separation = 10

[node name="Volume" type="Label" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer/AsideDetails/MarginContainer/content/scrollContainer/HBoxContainer/listMenu/controles"]
margin_right = 707.0
margin_bottom = 37.0
custom_styles/normal = SubResource( 11 )
custom_fonts/font = SubResource( 6 )
text = "RÃ©glage des contrÃ´les"
uppercase = true

[node name="music" type="Label" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer/AsideDetails/MarginContainer/content/scrollContainer/HBoxContainer/listMenu/controles"]
margin_top = 47.0
margin_right = 707.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 6 )
text = "Touches"

[node name="touches" type="HBoxContainer" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer/AsideDetails/MarginContainer/content/scrollContainer/HBoxContainer/listMenu/controles"]
margin_top = 84.0
margin_right = 707.0
margin_bottom = 111.0

[node name="son3" type="Label" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer/AsideDetails/MarginContainer/content/scrollContainer/HBoxContainer/listMenu/controles/touches"]
margin_right = 148.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 6 )
text = "Aller Ã  gauche :"

[node name="son2" type="Label" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer/AsideDetails/MarginContainer/content/scrollContainer/HBoxContainer/listMenu/controles/touches"]
margin_left = 152.0
margin_right = 166.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 6 )
text = "Q"

[node name="touches2" type="HBoxContainer" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer/AsideDetails/MarginContainer/content/scrollContainer/HBoxContainer/listMenu/controles"]
margin_top = 121.0
margin_right = 707.0
margin_bottom = 148.0

[node name="son3" type="Label" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer/AsideDetails/MarginContainer/content/scrollContainer/HBoxContainer/listMenu/controles/touches2"]
margin_right = 137.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 6 )
text = "Aller Ã  Droite :"

[node name="son2" type="Label" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer/AsideDetails/MarginContainer/content/scrollContainer/HBoxContainer/listMenu/controles/touches2"]
margin_left = 141.0
margin_right = 156.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 6 )
text = "D"

[node name="touches3" type="HBoxContainer" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer/AsideDetails/MarginContainer/content/scrollContainer/HBoxContainer/listMenu/controles"]
margin_top = 158.0
margin_right = 707.0
margin_bottom = 185.0

[node name="son3" type="Label" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer/AsideDetails/MarginContainer/content/scrollContainer/HBoxContainer/listMenu/controles/touches3"]
margin_right = 75.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 6 )
text = "Sauter :"

[node name="son2" type="Label" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer/AsideDetails/MarginContainer/content/scrollContainer/HBoxContainer/listMenu/controles/touches3"]
margin_left = 79.0
margin_right = 150.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 6 )
text = "Espace"

[node name="touches4" type="HBoxContainer" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer/AsideDetails/MarginContainer/content/scrollContainer/HBoxContainer/listMenu/controles"]
margin_top = 195.0
margin_right = 707.0
margin_bottom = 222.0

[node name="son3" type="Label" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer/AsideDetails/MarginContainer/content/scrollContainer/HBoxContainer/listMenu/controles/touches4"]
margin_right = 96.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 6 )
text = "Attaquer :"

[node name="son2" type="Label" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer/AsideDetails/MarginContainer/content/scrollContainer/HBoxContainer/listMenu/controles/touches4"]
margin_left = 100.0
margin_right = 113.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 6 )
text = "A"

[node name="touches6" type="HBoxContainer" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer/AsideDetails/MarginContainer/content/scrollContainer/HBoxContainer/listMenu/controles"]
margin_top = 232.0
margin_right = 707.0
margin_bottom = 259.0

[node name="son3" type="Label" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer/AsideDetails/MarginContainer/content/scrollContainer/HBoxContainer/listMenu/controles/touches6"]
margin_right = 74.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 6 )
text = "Emote :"

[node name="son2" type="Label" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer/AsideDetails/MarginContainer/content/scrollContainer/HBoxContainer/listMenu/controles/touches6"]
margin_left = 78.0
margin_right = 134.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 6 )
text = "Alt F4"

[node name="touches5" type="HBoxContainer" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer/AsideDetails/MarginContainer/content/scrollContainer/HBoxContainer/listMenu/controles"]
margin_top = 269.0
margin_right = 707.0
margin_bottom = 296.0

[node name="son3" type="Label" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer/AsideDetails/MarginContainer/content/scrollContainer/HBoxContainer/listMenu/controles/touches5"]
margin_right = 139.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 6 )
text = "Coup de pied :"

[node name="son2" type="Label" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer/AsideDetails/MarginContainer/content/scrollContainer/HBoxContainer/listMenu/controles/touches5"]
margin_left = 143.0
margin_right = 157.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 6 )
text = "B"

[node name="jeu" type="VBoxContainer" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer/AsideDetails/MarginContainer/content/scrollContainer/HBoxContainer/listMenu"]
visible = false
margin_top = 195.0
margin_right = 707.0
margin_bottom = 406.0
size_flags_vertical = 3
custom_constants/separation = 10

[node name="Volume" type="Label" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer/AsideDetails/MarginContainer/content/scrollContainer/HBoxContainer/listMenu/jeu"]
margin_right = 707.0
margin_bottom = 37.0
custom_styles/normal = SubResource( 14 )
custom_fonts/font = SubResource( 6 )
text = "RÃ©glages du jeu"
uppercase = true

[node name="anim" type="Label" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer/AsideDetails/MarginContainer/content/scrollContainer/HBoxContainer/listMenu/jeu"]
margin_top = 47.0
margin_right = 707.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 6 )
text = "DÃ©sactiver les animations"

[node name="animToggle" type="CheckButton" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer/AsideDetails/MarginContainer/content/scrollContainer/HBoxContainer/listMenu/jeu"]
margin_top = 84.0
margin_right = 76.0
margin_bottom = 124.0
size_flags_horizontal = 2
custom_constants/check_vadjust = 0

[node name="pleinecran" type="Label" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer/AsideDetails/MarginContainer/content/scrollContainer/HBoxContainer/listMenu/jeu"]
margin_top = 134.0
margin_right = 707.0
margin_bottom = 161.0
custom_fonts/font = SubResource( 6 )
text = "Mode plein Ã©cran"

[node name="ecranToggle" type="CheckButton" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer/AsideDetails/MarginContainer/content/scrollContainer/HBoxContainer/listMenu/jeu"]
margin_top = 171.0
margin_right = 76.0
margin_bottom = 211.0
size_flags_horizontal = 2

[node name="BottomButtons" type="HBoxContainer" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer/AsideDetails/MarginContainer/content"]
margin_top = 340.0
margin_right = 720.0
margin_bottom = 360.0
alignment = 2

[node name="apply" type="Button" parent="SettingsFullWindow/VBoxContainer/main/settingsContainer/AsideDetails/MarginContainer/content/BottomButtons"]
margin_left = 619.0
margin_right = 720.0
margin_bottom = 20.0
mouse_default_cursor_shape = 2
text = "  APPLIQUER  "

[node name="AnimationPlayer" type="AnimationPlayer" parent="SettingsFullWindow"]
autoplay = "fade in"
